# scout_nav2

./: Dockerfile  README.md  run_container.sh
src/scout_mini_description/: CMakeLists.txt  package.xml
src/scout_mini_description/launch/: display.launch.py
src/scout_mini_description/urdf/: scout_mini.xacro
src/scout_mini_gz_sim/: CMakeLists.txt  package.xml
src/scout_mini_gz_sim/config/: ros_gz_bridge.yaml
src/scout_mini_gz_sim/launch/: sim.launch.py  teleop.launch.py
src/scout_mini_gz_sim/worlds/: test_world.sdf
src/scout_mini_nav2/: CMakeLists.txt  package.xml
src/scout_mini_nav2/config/: nav2_params.yaml  slam_toolbox.yaml
src/scout_mini_nav2/launch/: bringup.launch.py  nav2.launch.py  slam.launch.py
src/scout_mini_nav2/maps/: test_map.pgm  test_map.yaml
src/scout_mini_nav2/rviz/: nav2.rviz
src/scout_mini_nav2/scripts/: send_goals.py
