<?xml version="1.0"?>
<package format="3">
  <name>scout_mini_description</name>
  <version>0.1.0</version>
  <description>Scout Mini URDF with dual RS-AIRY LiDARs for Ignition Gazebo Fortress</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
