<?xml version="1.0"?>
<package format="3">
  <name>scout_mini_gz_sim</name>
  <version>0.1.0</version>
  <description>Scout Mini Gazebo Ignition Fortress simulation with dual LiDARs</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>scout_mini_description</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake_python</build_type>
  </export>
</package>
