<?xml version="1.0"?>
<package format="3">
  <name>scout_mini_nav2</name>
  <version>0.1.0</version>
  <description>Nav2 configuration for Scout Mini with dual RS-AIRY LiDARs</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_bringup</depend>
  <depend>nav2_simple_commander</depend>
  <depend>slam_toolbox</depend>
  <depend>scout_mini_description</depend>
  <depend>scout_mini_gz_sim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
